; ModuleID = '/home/carl/AnghaBench/linux/drivers/mfd/extr_wm8350-irq.c_wm8350_irq_disable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mfd/extr_wm8350-irq.c_wm8350_irq_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.irq_data = type { i32 }
%struct.wm8350 = type { i32* }
%struct.wm8350_irq_data = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.irq_data*)* @wm8350_irq_disable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wm8350_irq_disable(%struct.irq_data* %0) #0 {
  %2 = alloca %struct.irq_data*, align 8
  %3 = alloca %struct.wm8350*, align 8
  %4 = alloca %struct.wm8350_irq_data*, align 8
  store %struct.irq_data* %0, %struct.irq_data** %2, align 8
  %5 = load %struct.irq_data*, %struct.irq_data** %2, align 8
  %6 = call %struct.wm8350* @irq_data_get_irq_chip_data(%struct.irq_data* %5)
  store %struct.wm8350* %6, %struct.wm8350** %3, align 8
  %7 = load %struct.wm8350*, %struct.wm8350** %3, align 8
  %8 = load %struct.irq_data*, %struct.irq_data** %2, align 8
  %9 = getelementptr inbounds %struct.irq_data, %struct.irq_data* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call %struct.wm8350_irq_data* @irq_to_wm8350_irq(%struct.wm8350* %7, i32 %10)
  store %struct.wm8350_irq_data* %11, %struct.wm8350_irq_data** %4, align 8
  %12 = load %struct.wm8350_irq_data*, %struct.wm8350_irq_data** %4, align 8
  %13 = getelementptr inbounds %struct.wm8350_irq_data, %struct.wm8350_irq_data* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 8
  %15 = load %struct.wm8350*, %struct.wm8350** %3, align 8
  %16 = getelementptr inbounds %struct.wm8350, %struct.wm8350* %15, i32 0, i32 0
  %17 = load i32*, i32** %16, align 8
  %18 = load %struct.wm8350_irq_data*, %struct.wm8350_irq_data** %4, align 8
  %19 = getelementptr inbounds %struct.wm8350_irq_data, %struct.wm8350_irq_data* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = getelementptr inbounds i32, i32* %17, i64 %20
  %22 = load i32, i32* %21, align 4
  %23 = or i32 %22, %14
  store i32 %23, i32* %21, align 4
  ret void
}

declare dso_local %struct.wm8350* @irq_data_get_irq_chip_data(%struct.irq_data*) #1

declare dso_local %struct.wm8350_irq_data* @irq_to_wm8350_irq(%struct.wm8350*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
